# modaic-examples

./: .gitignore  README.md
braintrust/: .gitignore  README.md  arbiter.py  example.env  pyproject.toml  requirements.txt  scorer.py  test.py
spam-classification/: .gitignore  README.md  arbiter.py  online_confidence.py  predict.py  pyproject.toml  view.py
toxicity/: README.md  arbiter.py  predict.py  pyproject.toml
toxicity/data/or-bench-predictions/: data-00000-of-00001.arrow  dataset_info.json  state.json
version-control/: README.md  example.env  optimize.py  program.py  pyproject.toml  use.py
version-control/data/: train.jsonl  val.jsonl
