[project]
name = "spam-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "modaic>=0.31.1",
    "modaic-client>=0.31.1"
]

[tool.uv.sources]
modaic = {path = "../../core/modaic/src/modaic-sdk", editable = true}
modaic-client = {path = "../../core/modaic/src/modaic-client", editable = true}
